src/test/ui/proc-macro/invalid-punct-ident-3.stderr
query stack during panic:
we're just showing a limited slice of the query stack
end of query stack
error: proc macro panicked
  --> $DIR/invalid-punct-ident-3.rs:16:1
   |
LL | invalid_raw_ident!();
   | ^^^^^^^^^^^^^^^^^^^^^
   |
   = help: message: `self` cannot be a raw identifier

error: aborting due to previous error

